visual fix for too small popover

--- a/src/script/gutenberg/components/widgets/PostWidget.css
+++ b/src/script/gutenberg/components/widgets/PostWidget.css
@@ -36,3 +36,7 @@
     bottom: 2px;
     right: -6px;
 }
+
+.blockx--search-post__popover{
+    min-width: 240px;
+}
